Fix bios overflowing body of page

--- a/css/styles.css
+++ b/css/styles.css
@@ -240,6 +240,16 @@ body main {
   background-color: var(--dark);
 }
 
+.bio-hidden {
+  max-height: 0px;
+  transition: all 0.3s ease;
+  overflow: hidden;
+}
+
+.caption:hover .bio-hidden {
+  max-height: 100%;
+}
+
 .role {
   color: #aaaaaa;
 }
